# taskflow-desktop-rust

./: .gitignore  README.md  RELEASE.md  build-env.example.ps1  devlog.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: CROSS-PLATFORM-MONITORING.md  PRD.md  TDD.md
src/: App.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  config.example.json  release.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  config.rs  error.rs  events.rs  lifecycle.rs  main.rs  window_size.rs
src-tauri/src/api/: mod.rs  models.rs
src-tauri/src/auth/: cognito.rs  keyring.rs  mod.rs
src-tauri/src/commands/: auth_cmds.rs  data_cmds.rs  mod.rs  system_cmds.rs  timer_cmds.rs  update_cmds.rs
src-tauri/src/monitor/: active_window.rs  idle.rs  input.rs  mod.rs  screenshot.rs  session.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: install.rs  mod.rs  verify.rs
src/components/: AvatarMenu.tsx  IdlePrompt.tsx  LoginForm.tsx  Logo.tsx  SessionInspect.tsx  SettingsDrawer.tsx  ShortcutHelp.tsx  TaskSelector.tsx  Timer.tsx  TimerView.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Label.tsx
src/lib/: cn.ts  descriptionHistory.ts  errors.ts  ipc.ts  notify.ts  projectColor.ts  serverClock.ts  settings.ts  taskHistory.ts  tauri-bridge.ts  useShortcuts.ts  useTheme.ts
src/styles/: main.css
